welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:24: error: not found: value True
    case Direction.EAST => left(); if (isFacingWall()) {return True}; left;
                                                               ^SnakeBuggle:25: error: not found: value True
    case Direction.WEST => right(); if (isFacingWall()) {return True}; right;
                                                                ^